tests/ui/bad_goal_input.stderr
error: Relations marked as @input cannot be derived from a rule.
  --> $DIR/bad_goal_input.rs:11:9
   |
11 |         In(0, 0) <- (true);
   |         ^^
